Fix included directories

--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -6,7 +6,7 @@ sonar.projectName=robin-hood-hashing
 sonar.projectVersion=1.0
 
 # Path is relative to the sonar-project.properties file. Replace "\" by "/" on Windows.
-sonar.sources=src/include,test/unit,test/app
+sonar.sources=src/include,src/test/unit,src/test/app
 
 sonar.exclusions=**/*.py
 
